Change font format to vmin reduce font size for landscape mobile devices shrink GIF to fit container changes 'current  mood' text to only 'mood' changes change mood link to font awesome edit icon reduces size of menu to take up less space

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ main:before {
     top: 0;
     left: 0;
     display: block;
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 #main-page {
     position: absolute;
@@ -139,7 +139,7 @@ main:before {
 }
 .header-container h3 {
     position: absolute;
-    color: silver;
+    color: burlywood;
     text-shadow: 1px 1px 1px black;
     top: 10%;
     right: 3%;
@@ -331,90 +331,93 @@ iframe {
  #news-article-container, #gif-content-container, #poem-content-container {
     z-index: 1;
 }
+.gif {
+    width:100%;
+}
 
 @media screen and (max-width: 1000px) {
     /* MAIN PAGE  */
     .title {
-        font-size: 12vw;
+        font-size: 12vmin;
         margin: 0;
         align-self: center;
     }
     .title:after {
-        font-size: 3vw;
+        font-size: 3vmin;
     }
     .weather-temp {
-        font-size: 5vw;
+        font-size: 5vmin;
     }
     .weather-location {
-        font-size: 3vw;
+        font-size: 3vmin;
     }
     .clock {
-        font-size: 15vw;
+        font-size: 15vmin;
     }
     .greeting {
-        font-size: 7vw;
+        font-size: 7vmin;
     }
     .mood-text {
-        font-size: 7vw;
+        font-size: 7vmin;
     }
     .mood-button-container {
-        height: 65%;
+        height: 80%;
         width: 90%;
         flex-wrap: wrap;
     }
     .mood-button {
         width: 30%;
         margin-bottom: 5px;
-        font-size: 4vw;
+        font-size: 4vmin;
     }
 
     /* CONTENT PAGE */
     .header-container h1 {
-        font-size: 10vw;
-        margin: 0 auto 0 auto;
-        padding: 0;
+        font-size: 10vmin;
+        /* margin: 0 auto 0 auto; */
+        /* padding: 0; */
     }
     .header-container h3 {
-        position: relative;
-        font-size: 4vw;
-        margin: 0 auto 0 auto;
+        /* position: relative; */
+        font-size: 4vmin;
+        /* margin: 0 auto 0 auto; */
     }
     .menu a {
-        font-size: 4vw;
+        font-size: 4vmin;
         text-decoration: none;
     }
     .section-header h1 {
-        font-size: 4vw;
+        font-size: 4vmin;
     }
     .video-container {
         width: 80%;
     }
     .poem-title {
-        font-size: 5vw;
+        font-size: 5vmin;
         text-decoration: underline;
     }
     .poem-text {
-        font-size: 4vw;
+        font-size: 4vmin;
     }
     .news-list li {
-        font-size: 3.5vw;
+        font-size: 3.5vmin;
         margin-bottom: 30px;
     }
     .article-image {
         width: 65%;
     }
     .article-title {
-        font-size: 4.5vw;
+        font-size: 4.5vmin;
     }
     .article-content-container {
         width: 90%;
     }
     .article-content {
-        font-size: 3.5vw;
+        font-size: 3.5vmin;
     }
     .back-button-container, .read-article-button-container {
         width: 35%;
-        font-size: 2.7vw;
+        font-size: 2.7vmin;
     }
 }
 
@@ -426,7 +429,7 @@ iframe {
     .title {
         width: auto;
         margin: auto;
-        font-size: 17vw;
+        font-size: 17vmin;
     }
     .title:after {
         display:none;
@@ -437,38 +440,46 @@ iframe {
         display: none;
     }
     .clock {
-        font-size: 6em;
+        font-size: 18vmin;
     }
     .mood-text {
-        font-size: 8vw;
+        font-size: 8vmin;
     }
     .mood-button {
-        font-size: 4.5vw;
+        font-size: 5vmin;
     }
     /* CONTENT PAGE  */
     .header-container h1 {
-        font-size: 14vw;
+        font-size: 9vmin;
     }
     .header-container h3 {
-        font-size: 5vw;
+        font-size: 5vmin;
+        margin: 0;
+    }
+    .change-mood {
+        font-size: 5.5vmin;
+    }
+    .header-container .menu {
+        margin: 0;
     }
     .menu a {
-        font-size: 5vw;
+        font-size: 4vmin;
+        padding: 6px;
     }
     .section-header h1 {
-        font-size: 5.5vw;
+        font-size: 5.5vmin;
     }
     .video-container {
         width: 80%;
     }
     .poem-title {
-        font-size: 6vw;
+        font-size: 6vmin;
     }
     #poem-content-container {
         width: 95%;
     }
     .poem-text {
-        font-size: 5vw;
+        font-size: 5vmin;
     }
     #news-content-container {
         width: 85%;
@@ -477,32 +488,35 @@ iframe {
         width: 90%;
     }
     .news-list li {
-        font-size: 5vw;
+        font-size: 5vmin;
     }
     .article-image {
         width: 80%;
     }
     .article-title {
-        font-size: 5.5vw;
+        font-size: 5.5vmin;
     }
     .article-content-container {
         width: 100%;
     }
     .article-content {
-        font-size: 5vw;
+        font-size: 5vmin;
     }
     .back-button-container, .read-article-button-container {
-        font-size: 4vw;
+        font-size: 4vmin;
         width: 45%;
+    }
+    #gif-content-container {
+        width: 90%;
     }
 }
 
 @media screen and (max-width: 550px) {
     .clock {
-        font-size: 18vw;
+        font-size: 18vmin;
     }
     .greeting {
-        font-size: 10vw;
+        font-size: 10vmin;
     }
 }
 
@@ -512,7 +526,7 @@ iframe {
         height: 70vh;
     }
     .title {
-        font-size: 20vw;
+        font-size: 20vmin;
     }
     .js-clock {
         justify-content: center;
@@ -525,31 +539,28 @@ iframe {
     }
     .mood-button {
         width: 45%;
-        font-size: 6.5vw;
+        font-size: 6.5vmin;
     }
     .mood-text {
-        font-size: 10vw;
+        font-size: 10vmin;
     }
     /* CONTENT PAGE  */
     .header-container h3 {
-        font-size: 5vw;
+        font-size: 5vmin;
         margin-bottom: 10px;
     }
     .change-mood {
-        font-size: 7vw;
+        font-size: 7vmin;
     }
     .menu a {
-        font-size: 6vw;
-    }
-    .section-container {
-        top: 25vh;
+        font-size: 6vmin;
     }
     /* POEM SECTION  */
     .poem-title {
-        font-size: 7vw;
+        font-size: 7vmin;
     }
     .poem-text {
-        font-size: 5.5vw;
+        font-size: 5.5vmin;
     }
     /* NEWS SECTION  */
     .news-list {
@@ -567,7 +578,7 @@ iframe {
         width: 10%;
         top: 0;
         left: -30px;
-        font-size: 8vw;
+        font-size: 8vmin;
     }
     .news-list li:hover {
         border-left-width: 2px;
@@ -576,10 +587,10 @@ iframe {
         width: 90%;
     }
     .article-title {
-        font-size: 6.5vw;
+        font-size: 6.5vmin;
     }
     .article-content {
-        font-size: 6vw;
+        font-size: 6vmin;
     }
     .buttons-container {
         flex-wrap: wrap;
@@ -588,15 +599,12 @@ iframe {
     .back-button-container, .read-article-button-container {
         width: 80%;
         margin-bottom: 10px;
-        font-size: 6vw;
+        font-size: 6vmin;
     }
     .read-article-button-container {
         order: 1;
     }
     .back-button-container {
         order: 2;
-    }
-    .gif {
-        width: 90%;
     }
 }
